Added some stuff or something. Improved GridFTP listing performance.